feat: launch Tasks 2.0
